# themis

./: .gitignore  Dockerfile  README.md  build.gradle  cdk.json  pyproject.toml  settings.gradle  versions.props
core/: build.gradle
core/src/main/java/io/themis/: Datasets.java  Table.java  TableDataGenerator.java
core/src/main/java/io/themis/column/: ArrayColumn.java  BigIntColumn.java  BinaryColumn.java  BooleanColumn.java  ByteColumn.java  CharColumn.java  Column.java  ColumnVisitor.java  DateColumn.java  DecimalColumn.java  DoubleColumn.java  FloatColumn.java  IntColumn.java  MapColumn.java  ShortColumn.java  StringColumn.java  StructColumn.java  TimestampColumn.java  TimestampLocalTzColumn.java  TimestampTzColumn.java  VarcharColumn.java
core/src/main/java/io/themis/datagen/: PrestoRandomInsertGenerator.java  RandomDataGenerator.java  RandomRowGenerator.java  SimpleTables.java
core/src/main/java/io/themis/partition/: BucketTransform.java  DayTransform.java  ExternalTransform.java  HourTransform.java  IdentityTransform.java  MonthTransform.java  PartitionTransform.java  TruncateTransform.java  YearTransform.java
core/src/main/java/io/themis/tpcds/: TpcdsStringRowGenerator.java  TpcdsTables.java
core/src/test/java/io/themis/datagen/: RandomRowGeneratorTest.java  SimpleTablesTest.java
spark/: build.gradle
spark-iceberg/: build.gradle
tests/: test_emr.py  test_iam.py  test_s3.py
themis/: artifacts.py  cdk.py  cli.py
themis/airflow/: utils.py  xcom.py
themis/airflow/dags/: __init__.py
themis/aws/: emr.py  iam.py  s3.py
themis/spark/: emr.py
(+15 files in other folders)
