[tool.poetry]
name = "themis"
version = "0.1.0"
description = "Themis Framework for Big Data Benchmark"
authors = ["Armin Najafi <najarmin@amazon.com>", "Jack Ye <yzhaoqin@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
boto3 = "^1.26"
boto3-stubs = { version = "^1.26", extras = ["s3", "iam", "emr"] }
backoff = "^2.2"
overrides = "^7.3"
pandas = "^1.5"
fsspec = { version = "^2023", extras = ["s3"] }  # Used by some specifc pandas functions

[tool.poetry.dev-dependencies]
setuptools = "^67.4"
pytest = "^7.2"
pytest-mock = "^3.10"
moto = "^4.1"
# for developing DAGs uploaded and executed in Airflow cluster
apache-airflow = { version = "^2.4", extras = ["amazon"] }
# for devloping CDK stack for service deployment
constructs = "^10"
aws-cdk-lib = "^2"
toml = "^0.10"
# for developing PySpark scripts uploaded and executed in Spark cluster
pyspark = "^3.3"

[tool.poetry.scripts]
themis = "themis.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
